--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  
+  animated_bottom_navigation_bar: ^0.3.2
   cupertino_icons: ^1.0.4
   fl_chart: ^0.40.6
   flutter:
     sdk: flutter
   get: ^4.6.1
+  water_drop_nav_bar: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
