--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.1
+  path_provider: ^2.0.8
+  sqflite: ^2.0.1
+  uuid: ^3.0.5
   water_drop_nav_bar: ^2.0.0
 
 dev_dependencies:
