--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 dependencies:
   animated_bottom_navigation_bar: ^0.3.2
   cupertino_icons: ^1.0.4
+  date_format: ^2.0.5
   fl_chart: ^0.40.6
   flutter:
     sdk: flutter
   get: ^4.6.1
+  intl: ^0.17.0
   path_provider: ^2.0.8
   sqflite: ^2.0.1
   uuid: ^3.0.5
