--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   animated_bottom_navigation_bar: ^0.3.2
   cupertino_icons: ^1.0.4
   date_format: ^2.0.5
+  date_time_format: ^2.0.1
   fl_chart: ^0.40.6
   flutter:
     sdk: flutter
